  * Adapt linux/apt plugin to work properly with Debian testing/unstable
    (patch from Rune N. Skillingstad).
  * Munin-node now makes sure it runs the plugins from a world-readable dir.
  * Added new plugin generic/apc_nis to monitor APC UPS, contributed by
    xavier.
  * Made graph_title a parameter for generic/exim_mailqueue (patch by Torstein
    T. Svendsen, SF#1060834).

munin (1.1.4)

  * Better error handling when fetching data from RRD files.
  * Fixed bug in munin-graph when choosing colours (Deb#267185).
  * Added plugin linux/df_abs
  * Sanitise incoming fieldnames a bit better.
  * Small layout improvements.
  * Added new options "graph_height" and "graph_width", to beter control size.
  * Added support for SNMP probing.
  * SNMP plugin "if" now accepts PPP interfaces as well as ethernet
    interfaces.
  * SNMP plugin "df" now understands Windows SNMP daemon.
  
munin (1.1.3)

  * Applied patch from Jacques Caruso to make HTML output standards
    compliant.
  * Munin-graph: fixed bug when combining graph_order aliases with
    "normal" fields, as reported by Jacques Caruso.
  * Plugin bugfixes from Jacques Caruso, in linux/iostat_ios and
    generic/ipacng.
  * Munin-nagios: Only state number of OKs when something is in warning or
    critical state.
  * Munin-graph: Added 'graph_sources' option. This is (in effect) the same as
    graph_order, but with a default of 'graph no'.
  * Applied patch from Matthieu Lochegnies to munin-graph, and fixed the
    same problem elsewhere in the code (Deb#250982, SF#924561).
  * Force LANG/LC_ALL=C in generic/hddtemp2, to remove problems in parsing of
    hddtemp output (Deb#253497).
  * Force LANG/LC_ALL=C in linux/sensors_, to remove problems in parsing of
    sensors output (SF#972749, SF#972748, Deb#255312).
  * linux/sensors_temp now understand temp lines without hyst or max settings
    (Deb#256380).
  * Made linux/sensors_volt work with negative voltages (Deb#256734).