@@ -10,6 +10,9 @@
 # 	autoconf (optional)
 #
 # $Log$
+# Revision 1.3  2004/11/10 15:49:05  jimmyo
+# Fixed typo in generic/sendmail_mailstats (patch by Lupe Christoph, SF#1058128).
+#
 # Revision 1.2  2004/05/20 19:02:36  jimmyo
 # Set categories on a bunch of plugins
 #
@@ -21,7 +24,7 @@
 TEMP_FILE=/tmp/lrrd-sendmail
 
 if [ "$1" = "autoconf" ]; then
-        if which mailstats 2>&1 > /dev/nul ; then
+        if which mailstats 2>&1 > /dev/null ; then
 		echo yes
 		exit 0
 	else
